syntax = "proto3";

package proton_pass_item_v1;

// Item types

message ItemNote {
}

message PasskeyCreationData {
	string os_name = 1;
	string os_version = 2;
	string device_name = 3;
	string app_version = 4;
}

message Passkey {
	string key_id = 1;
	bytes content = 2;
	string domain = 3;
	string rp_id = 4;
	string rp_name = 5;
	string user_name = 6;
	string user_display_name = 7;
	bytes user_id = 8;
	uint32 create_time = 9;
	string note = 10;
	bytes credential_id = 11;
	bytes user_handle = 12;
	PasskeyCreationData creation_data = 13;
}

message ItemLogin {
	string item_email = 1;
	string password = 2;
	repeated string urls = 3;
	string totp_uri = 4;
	repeated Passkey passkeys = 5;
	string item_username = 6;
}

message ItemAlias {
}

// Credit cards
enum CardType {
	Unspecified = 0;
	Other = 1;
	Visa = 2;
	Mastercard = 3;
	AmericanExpress = 4;
}

message ItemCreditCard {
	string cardholder_name = 1;
	CardType card_type = 2;
	string number = 3;
	string verification_number = 4;
	// Expected format: YYYY-MM, always containing two numbers for the month, even if is 01
	string expiration_date = 5;
	string pin = 6;
}

message ItemIdentity {

	// Personal details
	// Shown
	string full_name = 1;
	string email = 2;
	string phone_number = 3;
	// Additional
	string first_name = 4;
	string middle_name = 5;
	string last_name = 6;
	string birthdate = 7;
	string gender = 8;
	repeated ExtraField extra_personal_details = 9;

	// Address details
	// Shown
	string organization = 10;
	string street_address = 11;
	string zip_or_postal_code = 12;
	string city = 13;
	string state_or_province = 14;
	string country_or_region = 15;
	// Additional
	string floor = 16;
	string county = 17;
	repeated ExtraField extra_address_details = 18;

	// Contact details
	// Shown
	string social_security_number = 19;
	string passport_number = 20;
	string license_number = 21;
	string website = 22;
	string x_handle = 23;
	string second_phone_number = 24;
	// Additional
	string linkedin = 25;
	string reddit = 26;
	string facebook = 27;
	string yahoo = 28;
	string instagram = 29;
	repeated ExtraField extra_contact_details = 30;

	// Work details
	// Shown
	string company = 31;
	string job_title = 32;
	// Additional
	string personal_website = 33;
	string work_phone_number = 34;
	string work_email = 35;
	repeated ExtraField extra_work_details = 36;

	// Extra sections
	repeated ExtraIdentitySection extra_sections = 37;
}

message ExtraIdentitySection {
	string section_name = 1;
	repeated ExtraField section_fields = 2;
}

// Client extras
message AllowedAndroidApp {
	string package_name = 1;
	repeated string hashes = 2;
	string app_name = 3;
}

message AndroidSpecific {
	repeated AllowedAndroidApp allowed_apps = 1;
}

message PlatformSpecific {
	AndroidSpecific android = 1;
}

// Item

message ExtraTotp {
	string totp_uri = 1;
}

message ExtraTextField {
	string content = 1;
}

message ExtraHiddenField {
	string content = 1;
}

message ExtraField {
	string field_name = 1;
	oneof content {
		ExtraTotp totp = 2;
		ExtraTextField text = 3;
		ExtraHiddenField hidden = 4;
	}
}

message Metadata {
	string name = 1;
	string note = 2;
	string item_uuid = 3;
}

message Content {
	// No case 1 to avoid having a default
	oneof content {
		ItemNote note = 2;
		ItemLogin login = 3;
		ItemAlias alias = 4;
		ItemCreditCard credit_card = 5;
		ItemIdentity identity = 6;
	}
}

message Item {
	Metadata metadata = 1;
	Content content = 2;
	PlatformSpecific platform_specific = 3;
	repeated ExtraField extra_fields = 4;
}
